# poshpy

./: .bumpversion.cfg  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.md  README.rst  pyproject.toml  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml  release.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
poshpy/: __init__.py  api.py  models.py
tests/: __init__.py  test_poshpy.py
