[tool]
[tool.poetry]
name = "poshpy"
version = "0.1.0"
homepage = "https://github.com/blueghostlabs/poshpy"
description = "Top-level package for poshpy."
authors = ["Jamie Phillips <jamie@blueghostlabs.com>"]
readme = "README.rst"
license =  "Apache-2.0"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "poshpy" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
sphinx = "*"
tox = "*"
yapf = "*"
pytest-subprocess = "^1.0.0"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
